# ai-incident-investigator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  claude.yml
docs/: adoption.md  architecture.md  assumptions.md  collection_sources.md  demo_tour.md  eval_scorecard.md  execution_contract.md  execution_design.md  incident_package_contract.md  learning_contract.md  learning_design.md  output_contract.md  product.md  testing_and_demo.md
docs/samples/: latency_spike-haiku45-report.md  latency_spike-sonnet5-report.md  (+1 more)
sandbox/: README.md  docker-compose.yml  executor.toml  prometheus.yml  runbook.md  sources.toml  topology.json
scripts/: bootstrap_fixtures.py  estimate_tokens.py  eval_corpus.py  live_eval.py  pr_ready_check.sh
tests/: discover_stub.py  flag_stub.py  helpers.py  loki_github_stubs.py  prometheus_stub.py  publish_stub.py  scripted_runs.py  sentry_stub.py  test_adoption_examples.py  test_agents.py  test_anthropic_client.py  test_approvals.py  test_cli.py  test_cli_llm.py  test_collect_cli.py  test_collect_degradation.py  test_collect_framework.py  test_collect_golden.py  test_collect_http.py  test_collect_loki_github.py  test_collect_prometheus.py  test_collect_runbook.py  test_collect_security.py  test_collect_sentry.py  test_compare.py  test_contracts.py  test_discover.py  test_doctor.py  test_eval_corpus.py  test_examples.py  test_execute.py  test_execution_contract.py  test_external_drafts.py  test_flags.py  test_golden.py  test_graph.py  test_history.py  test_llm.py  test_loading.py  test_patterns.py  (+15 more)
(+271 files in other folders)
